# iaexp

./: README.md  pyproject.toml
src/data_loading/: load_data.py
src/data_processing/: preprocess_data.py
src/model_evaluation/: evaluate_model.py
