[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_classifier"
version = "0.1"
requires-python = "3.12"
dependencies = [
    "tensorflow==2.19.0",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "mlflow==2.21.2",
    "flask==2.2.5",
]

[tool.setuptools.packages.find]
where = ["."]
